Finish All Validator cheked

--- a/about-2.html
+++ b/about-2.html
@@ -25,7 +25,7 @@
 			<nav>
 				<div class="logo">
 					<a href="index.html">
-						<img src="img/logo/logo.png" alt="logo" alt="img">
+						<img src="img/logo/logo.png" alt="logo">
 					</a>
 				</div>
 				<ul class="nav-links">
@@ -56,7 +56,7 @@
 	<!-- Main START -->
 	<main>
 		<!-- Hero START -->
-		<section id="hero">
+		<div id="hero">
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-12 col-md-12">
@@ -65,10 +65,10 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<!-- Hero END -->
 		<!-- Integrity START -->
-		<section id="integrity">
+		<div id="integrity">
 			<div class="container">
 				<div class="row s-mrt-50  align-items-center">
 					<div class="col-sm-12 col-md-6 col-lg-5 integrity-info">
@@ -80,14 +80,14 @@
 						</ul>
 					</div>
 					<div class="col-sm-12 col-md-6 col-lg-6 int-img-box">
-						<img src="img/content/about-cover-2.png" alt="">
+						<img src="img/content/about-cover-2.png" alt="img-2">
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<!-- Integrity END -->
 		<!-- Counter START -->
-		<section id="counter">
+		<div id="counter">
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-12 col-md-4 countboxs c-box-1">
@@ -104,10 +104,10 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<!-- Counter END-->
 		<!-- Services START -->
-		<section id="services">
+		<div id="services">
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-sm-12 col-md-7 col-centered services-title">
@@ -118,7 +118,7 @@
 				<div class="row justify-content-center">
 					<div class="services-item col-sm-12 col-md-4">
 						<div class="services-item-box">
-							<img src="img/icon/about-services-1.png" alt="" class="s-mrt-45">
+							<img src="img/icon/about-services-1.png" alt="img-3" class="s-mrt-45">
 							<h4 class="s-mrt-30">CHIEF INVESTMENT OFFICER</h4>
 							<p class="s-mrb-60">Let us know how we can help! Get in touch and we’ll give you a fresh perspective on your business.</p>
 							<a href="#">LEARN MORE <i class="fas fa-arrow-right"></i></a>
@@ -126,7 +126,7 @@
 					</div>
 					<div class="services-item col-sm-12 col-md-4">
 						<div class="services-item-box">
-							<img src="img/icon/about-services-2.png" alt="" class="s-mrt-45">
+							<img src="img/icon/about-services-2.png" alt="img-4" class="s-mrt-45">
 							<h4 class="s-mrt-30">ADVISORY CONSULTING</h4>
 							<p class="s-mrb-60">Let us know how we can help! Get in touch and we’ll give you a fresh perspective on your business.</p>
 							<a href="#">LEARN MORE <i class="fas fa-arrow-right"></i></a>
@@ -134,7 +134,7 @@
 					</div>
 					<div class="services-item col-sm-12 col-md-4">
 						<div class="services-item-box">
-							<img src="img/icon/about-services-3.png" alt="" class="s-mrt-45">
+							<img src="img/icon/about-services-3.png" alt="img-5" class="s-mrt-45">
 							<h4 class="s-mrt-30">SINGLE STRATEGY SOLUTIONS</h4>
 							<p class="s-mrb-60">Let us know how we can help! Get in touch and we’ll give you a fresh perspective on your business.</p>
 							<a href="#">LEARN MORE <i class="fas fa-arrow-right"></i></a>
@@ -142,17 +142,17 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<!-- Services END -->
 		<!-- Reviews START -->
-		<section id="reviews">
+		<div id="reviews">
 			<div class="container">
 				<div class="row align-items-center">
 					<div class="col-sm-12 col-md-4 softwar-info">
 						<h3 class="h-6-subtitle">REVIEWS & FEEDBACKS</h3>
 						<h2 class="h-6-title s-mrt-10">Our customers rated us <span>excellent</span></h2>
 						<p class="h-6-info s-mrt-25">Our process begins with a collaborative and holistic assessment to gain a robust understand of you, your business and key stakeholders. We will explore your business problems and needs co-creatively.</p>
-						<img src="img/icon/h-6-stars-2.png" alt="">
+						<img src="img/icon/h-6-stars-2.png" alt="img-6">
 					</div>
 					<div class="col-md-12 col-lg-4">
 						<div class="row">
@@ -160,10 +160,10 @@
 								<div class="item rev-item">
 									<div class="hed-rev">
 										<div class="feed-img  s-mrt-40">
-											<img src="img/content/h-4-feed-item-1.png" alt="">
+											<img src="img/content/h-4-feed-item-1.png" alt="img-7">
 										</div>
 										<div class="feed-stars s-mrt-40">
-											<img src="img/icon/reviews-stars.png"><br>
+											<img src="img/icon/reviews-stars.png" alt="img-8"><br>
 											<span class="author"><span>Eloise Smith,</span> USA Customer</span>
 										</div>
 									</div>
@@ -175,10 +175,10 @@
 								<div class="item rev-item">
 									<div class="hed-rev">
 										<div class="feed-img s-mrt-40">
-											<img src="img/content/h-4-feed-item-1.png" alt="">
+											<img src="img/content/h-4-feed-item-1.png" alt="img-9">
 										</div>
 										<div class="feed-stars s-mrt-40">
-											<img src="img/icon/reviews-stars.png"><br>
+											<img src="img/icon/reviews-stars.png" alt="img-10"><br>
 											<span class="author"><span>Eloise Smith,</span> USA Customer</span>
 										</div>
 									</div>
@@ -192,10 +192,10 @@
 						<div class="item rev-item">
 							<div class="hed-rev">
 								<div class="feed-img  s-mrt-40">
-									<img src="img/content/h-4-feed-item-1.png" alt="">
+									<img src="img/content/h-4-feed-item-1.png" alt="img-11">
 								</div>
 								<div class="feed-stars s-mrt-40">
-									<img src="img/icon/reviews-stars.png"><br>
+									<img src="img/icon/reviews-stars.png" alt="img-12"><br>
 									<span class="author"><span>Eloise Smith,</span> USA Customer</span>
 								</div>
 							</div>
@@ -205,9 +205,9 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<!-- Reviews END -->
-		<section id="subscribe">
+		<div id="subscribe">
 			<div class="container">
 				<div class="row  justify-content-center">
 					<div class="col-sm-12 col-md-5 subscribe col-centered">
@@ -221,7 +221,7 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 	</main>
 	<!-- Main END -->
 	<!-- Footer START -->
@@ -277,7 +277,7 @@
 			</div>
 		</div>
 	</footer>
-	<section id="footer-bottom">
+	<div id="footer-bottom">
 		<div class="container">
 			<div class="row align-items-center">
 				<div class="col-sm-6 col-md-6">
@@ -301,7 +301,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
 	<!-- Footer END -->
 	<!-- Jquery -->
 	<script src="js/jquery.min.js"></script>
