--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 			<nav>
 				<div class="logo">
 					<a href="index.html">
-						<img src="img/logo/logo.png" alt="logo" alt="img">
+						<img src="img/logo/logo.png" alt="logo">
 					</a>
 				</div>
 				<ul class="nav-links">
@@ -56,7 +56,7 @@
 	<!-- Main START -->
 	<main>
 		<!-- Hero START -->
-		<section id="hero">
+		<div id="hero">
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-12 col-md-5">
@@ -65,10 +65,10 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<!-- Hero END -->
 		<!-- Integrity START -->
-		<section id="integrity">
+		<div id="integrity">
 			<div class="container">
 				<div class="row s-mrt-50  align-items-center">
 					<div class="col-sm-12 col-md-6 col-lg-5 integrity-info">
@@ -82,7 +82,7 @@
 					<div class="col-sm-12 col-md-6 col-lg-7">
 						<div class="video-element" id="video-element-2">
 							<div class="video-element__poster" id="video-poster-2">
-								<img src="img/icon/play-video-main.png" class="btn-play">
+								<img src="img/icon/play-video-main.png" class="btn-play" alt="img-1">
 							</div>
 						</div>
 						<script type="text/template" id="video-2">
@@ -91,10 +91,10 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<!-- Integrity END -->
 		<!-- About START -->
-		<section id="about">
+		<div id="about">
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="aboutinfo col-md-12 col-lg-8 col-centered s-mrb-60">
@@ -105,42 +105,42 @@
 				<div class="row">
 					<div class="col-md-12 col-lg-4">
 						<div class="infobox s-pdl-30 s-pdr-30">
-							<img src="img/icon/about-icon-1.png" class="s-mrt-40" alt="about-icon-1" alt="img">
+							<img src="img/icon/about-icon-1.png" class="s-mrt-40" alt="about-icon-1">
 							<h4 class="s-mrb-30 s-mrt-40 m-about-title about-title">Work with us</h4>
 							<p class="s-pdb-110 s-subtitle m-subtitle">Let us know how we can help! Get in touch and we’ll give you a fresh perspective on your business.</p>
 						</div>
 					</div>
 					<div class="col-md-12 col-lg-4">
 						<div class="infobox s-pdl-30 s-pdr-30">
-							<img src="img/icon/about-icon-2.png" class="s-mrt-40" alt="about-icon-2" alt="img">
+							<img src="img/icon/about-icon-2.png" class="s-mrt-40" alt="about-icon-2">
 							<h4 class="s-mrb-30 s-mrt-40 m-about-title about-title">Our process</h4>
 							<p class="s-pdb-110 s-subtitle m-subtitle">After a collaborative assessment we’ll explore your business problems and needs co-creatively.</p>
 						</div>
 					</div>
 					<div class="col-md-12 col-lg-4">
 						<div class="infobox s-pdl-30 s-pdr-30">
-							<img src="img/icon/about-icon-3.png" class="s-mrt-40" alt="about-icon-3" alt="img">
+							<img src="img/icon/about-icon-3.png" class="s-mrt-40" alt="about-icon-3">
 							<h4 class="s-mrb-30 s-mrt-40 m-about-title about-title">How we help</h4>
 							<p class="s-pdb-110 s-subtitle m-subtitle">We provide business development, marketing, planning, operations and financial services.</p>
 						</div>
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<!-- About END -->
 		<!-- Innovative START -->
-		<section id="innovative">
+		<div id="innovative">
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-12 col-lg-6 cir-divs">
 						<div class="bg-big">
-							<img src="img/content/mask-big.png" alt="img">
+							<img src="img/content/mask-big.png" alt="img-5">
 						</div>
 						<div class="bg-medium">
-							<img src="img/content/mask-smoll.png" alt="img">
+							<img src="img/content/mask-smoll.png" alt="img-6">
 						</div>
 						<div class="bg-smoll">
-							<img src="img/content/mask-medium.png" alt="img">
+							<img src="img/content/mask-medium.png" alt="img-7">
 						</div>
 					</div>
 					<div class="col-sm-12 col-lg-5">
@@ -157,10 +157,10 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<!-- Innovative END -->
 		<!-- Demo START -->
-		<section id="demo">
+		<div id="demo">
 			<div class="container">
 				<div class="row align-items-center">
 					<div class="col-md-12 col-lg-8 demoinfo">
@@ -171,10 +171,10 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<!-- Demo END -->
 		<!-- Reviews START -->
-		<section id="reviews" class="s-mrt-100 s-mrb-100">
+		<div id="reviews" class="s-mrt-100 s-mrb-100">
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-md-12 col-centered">
@@ -183,47 +183,47 @@
 					<div class="col-md-12 col-lg-6 col-centered">
 						<div id="owl-reviews" class="owl-carousel owl-theme">
 							<div class="item rev-item">
-								<img src="img/icon/reviews-stars.png" alt="img" alt="">
+								<img src="img/icon/reviews-stars.png" alt="img-8">
 								<p class="s-mrt-35 s-mrb-80">I am confident, no matter how pleased you are with your current IT, Platte River Networks will offer recommendations on how to improve your system making your staff more productive and improving your
 									bottom line.</p>
 								<p class="s-mrb-100">
-									<img src="img/content/reviews-item-1.png" alt="img"> <span class="reviews-name">Angela Geo</span>
+									<img src="img/content/reviews-item-1.png" alt="img-9"> <span class="reviews-name">Angela Geo</span>
 									<br> <span class="reviews-com">RED SEA Ltd.</span>
 								</p>
 							</div>
 							<div class="item rev-item">
-								<img src="img/icon/reviews-stars.png" alt="img">
+								<img src="img/icon/reviews-stars.png" alt="img-10">
 								<p class="s-mrt-35 s-mrb-80">I am confident, no matter how pleased you are with your current IT, Platte River Networks will offer recommendations on how to improve your system making your staff more productive and improving your
 									bottom line.</p>
 								<p class="s-mrb-100">
-									<img src="img/content/reviews-item-1.png" alt="img"> <span class="reviews-name">Angela Geo</span>
+									<img src="img/content/reviews-item-1.png" alt="img-11"> <span class="reviews-name">Angela Geo</span>
 									<br> <span class="reviews-com">RED SEA Ltd.</span>
 								</p>
 							</div>
 							<div class="item rev-item">
-								<img src="img/icon/reviews-stars.png" alt="img">
+								<img src="img/icon/reviews-stars.png" alt="img-12">
 								<p class="s-mrt-35 s-mrb-80">I am confident, no matter how pleased you are with your current IT, Platte River Networks will offer recommendations on how to improve your system making your staff more productive and improving your
 									bottom line.</p>
 								<p class="s-mrb-100">
-									<img src="img/content/reviews-item-1.png" alt="img"> <span class="reviews-name">Angela Geo</span>
+									<img src="img/content/reviews-item-1.png" alt="img-13"> <span class="reviews-name">Angela Geo</span>
 									<br> <span class="reviews-com">RED SEA Ltd.</span>
 								</p>
 							</div>
 							<div class="item rev-item">
-								<img src="img/icon/reviews-stars.png" alt="img">
+								<img src="img/icon/reviews-stars.png" alt="img-14">
 								<p class="s-mrt-35 s-mrb-80">I am confident, no matter how pleased you are with your current IT, Platte River Networks will offer recommendations on how to improve your system making your staff more productive and improving your
 									bottom line.</p>
 								<p class="s-mrb-100">
-									<img src="img/content/reviews-item-1.png" alt="img"> <span class="reviews-name">Angela Geo</span>
+									<img src="img/content/reviews-item-1.png" alt="img-15"> <span class="reviews-name">Angela Geo</span>
 									<br> <span class="reviews-com">RED SEA Ltd.</span>
 								</p>
 							</div>
 							<div class="item rev-item">
-								<img src="img/icon/reviews-stars.png" alt="img">
+								<img src="img/icon/reviews-stars.png" alt="img-16">
 								<p class="s-mrt-35 s-mrb-80">I am confident, no matter how pleased you are with your current IT, Platte River Networks will offer recommendations on how to improve your system making your staff more productive and improving your
 									bottom line.</p>
 								<p class="s-mrb-100">
-									<img src="img/content/reviews-item-1.png" alt="img"> <span class="reviews-name">Angela Geo</span>
+									<img src="img/content/reviews-item-1.png" alt="img-17"> <span class="reviews-name">Angela Geo</span>
 									<br> <span class="reviews-com">RED SEA Ltd.</span>
 								</p>
 							</div>
@@ -231,10 +231,10 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<!-- Reviews END -->
 		<!-- Newsletter START -->
-		<section id="news">
+		<div id="news">
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-sm-12">
@@ -244,7 +244,7 @@
 						<div class="input-group">
 							<input type="email" class="form-control news-input" placeholder="Enter your email"> <span class="input-group-btn">
 								<button class="bluebg s-btn-sm btnstyle send-req" type="submit">
-									<img src="img/icon/send.png" class="news-btn-send" alt="img">
+									<img src="img/icon/send.png" class="news-btn-send" alt="img-18">
 									<span>Send request</span>
 								</button>
 							</span>
@@ -252,7 +252,7 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<!-- Newsletter END -->
 	</main>
 	<!-- Main END -->
@@ -261,7 +261,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-12 col-md-4 foot-col-1">
-					<img src="img/logo/logo-2.png" alt="img">
+					<img src="img/logo/logo-2.png" alt="img-19">
 					<p class="s-mrt-40">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmodtempor incididunt ut labore et dolore magna aliqua.</p>
 					<ul class="social-footer">
 						<li>
