--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
 			<nav>
 				<div class="logo">
 					<a href="index.html">
-						<img src="img/logo/logo.png" alt="logo" alt="img">
+						<img src="img/logo/logo.png" alt="logo">
 					</a>
 				</div>
 				<ul class="nav-links">
@@ -56,7 +56,7 @@
 	<!-- Main START -->
 	<main>
 		<!-- Hero START -->
-		<section id="hero">
+		<div id="hero">
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-12 col-md-4">
@@ -65,14 +65,14 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<!-- Hero END -->
 		<!-- About START -->
-		<section id="about" class="s-mrb-100">
+		<div id="about" class="s-mrb-100">
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="aboutinfo col-md-12 col-lg-7 col-centered s-mrb-125">
-						<h3 class="s-mrt-100 s-title fs-20">We serve a wide range of companies</h3>
+						<h3 class="s-mrt-100 s-title fs-20">We listen to our customers</h3>
 						<h3 class="s-mrb-10 s-title textcolor-bl fs-36">We serve a wide range of companies</h3>
 						<p class="s-subtitle">We offer the following services to aspiring entrepreneurs looking to get their businesses off of the ground.</p>
 					</div>
@@ -80,31 +80,31 @@
 				<div class="row">
 					<div class="col-md-12 col-lg-4">
 						<div class="infobox s-pdl-30 s-pdr-30">
-							<img src="img/icon/about-icon-1.png" class="s-mrt-40" alt="about-icon-1" alt="img">
+							<img src="img/icon/about-icon-1.png" class="s-mrt-40" alt="about-icon-1">
 							<h4 class="s-mrb-30 s-mrt-40">Work with us</h4>
 							<p class="s-pdb-110">Let us know how we can help! Get in touch and we’ll give you a fresh perspective on your business.</p>
 						</div>
 					</div>
 					<div class="col-md-12 col-lg-4">
 						<div class="infobox s-pdl-30 s-pdr-30">
-							<img src="img/icon/about-icon-2.png" class="s-mrt-40" alt="about-icon-2" alt="img">
+							<img src="img/icon/about-icon-2.png" class="s-mrt-40" alt="about-icon-2">
 							<h4 class="s-mrb-30 s-mrt-40">Our process</h4>
 							<p class="s-pdb-110">After a collaborative assessment we’ll explore your business problems and needs co-creatively.</p>
 						</div>
 					</div>
 					<div class="col-md-12 col-lg-4">
 						<div class="infobox s-pdl-30 s-pdr-30">
-							<img src="img/icon/about-icon-3.png" class="s-mrt-40" alt="about-icon-3" alt="img">
+							<img src="img/icon/about-icon-3.png" class="s-mrt-40" alt="about-icon-3">
 							<h4 class="s-mrb-30 s-mrt-40">How we help</h4>
 							<p class="s-pdb-110">We provide business development, marketing, planning, operations and financial services.</p>
 						</div>
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<!-- About END -->
 		<!-- Faq START -->
-		<section id="faq">
+		<div id="faq">
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="aboutinfo col-md-12 col-lg-6 col-centered">
@@ -184,7 +184,7 @@
 							<div class="card">
 								<div class="card-header" id="headingfv">
 									<h5 class="mb-0 s-title textcolor-bl fs-20">
-										<button class="btn btn-link" data-toggle="collapse" data-target="#collapsefv" aria-expanded="true" a ria-controls="collapsefv">
+										<button class="btn btn-link" data-toggle="collapse" data-target="#collapsefv" aria-expanded="true" aria-controls="collapsefv">
 											5. Will you sign an NDA?
 											<span>+</span>
 										</button>
@@ -220,22 +220,22 @@
 					</div>
 					<div class="col-sm-12 col-md-5 offset-md-1 s-mrt-30">
 						<div class="faq-conetn">
-							<img src="img/icon/faq-1.png"><span class="faq-title">Business consultation</span>
+							<img src="img/icon/faq-1.png" alt="img-6"><span class="faq-title">Business consultation</span>
 							<p class="s-subtitle s-mrt-30">We offer the following services to aspiring entrepreneurs looking to get their businesses off of the ground.</p>
 							<p class="faq-more s-mrt-20"><a href="#">MORE</a></p>
 						</div>
 						<div class="faq-conetn">
-							<img src="img/icon/faq-2.png"><span class="faq-title">Business consultation</span>
+							<img src="img/icon/faq-2.png" alt="img-7"><span class="faq-title">Business consultation</span>
 							<p class="s-subtitle s-mrt-30">We offer the following services to aspiring entrepreneurs looking to get their businesses off of the ground.</p>
 							<p class="faq-more s-mrt-20"><a href="#">MORE</a></p>
 						</div>
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<!-- Faq END -->
 		<!-- Contact START -->
-		<section id="contact">
+		<div id="contact">
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="aboutinfo col-md-12 col-lg-7 col-centered s-mrb-125">
@@ -261,14 +261,14 @@
 					<div class="col-sm-12 col-md-6 col-lg-5 offset-lg-1">
 						<iframe
 							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d317718.69319292053!2d-0.3817765050863085!3d51.528307984912544!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2z0JvQvtC90LTQvtC9LCDQktC10LvQuNC60L7QsdGA0LjRgtCw0L3QuNGP!5e0!3m2!1sru!2s!4v1587625645791!5m2!1sru!2s"
-							width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+							 style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" id="map"></iframe>
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<!-- Contact END -->
 		<!-- Newsletter START -->
-		<section id="news">
+		<div id="news">
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-sm-12">
@@ -286,7 +286,7 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<!-- Newsletter END -->
 	</main>
 	<!-- Main END -->
