--- a/home-3.html
+++ b/home-3.html
@@ -50,7 +50,7 @@
 	</header>
 	<!-- Navbar END -->
 	<!-- Hero START -->
-	<section id="hero">
+	<div id="hero">
 		<div class="container">
 			<div class="row h-100 align-items-center justify-content-center">
 				<div class="col-sm-12 col-md-6 col-lg-5 hero-info col-centered">
@@ -76,10 +76,10 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
 	<!-- Hero END -->
 	<!-- Services START -->
-	<section id="services">
+	<div id="services">
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-sm-12 col-md-8 col-centered">
@@ -117,10 +117,10 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
 	<!-- Services END -->
 	<!-- Solution START -->
-	<section id="solution">
+	<div id="solution">
 		<div class="row align-items-center myrow">
 			<div class="col-sm-12 col-md-6 solution-box">
 			</div>
@@ -132,10 +132,10 @@
 				<a href="#" class="btn h3-btnstyle">OUR SOLUTIONS</a>
 			</div>
 		</div>
-	</section>
+	</div>
 	<!-- Solution END -->
 	<!-- Pricing START -->
-	<section id="pricing">
+	<div id="pricing">
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-sm-12 col-md-7 col-centered">
@@ -180,10 +180,10 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
 	<!-- Pricing END -->
 	<!-- Portfolio START -->
-	<section id="portfolio">
+	<div id="portfolio">
 			<div class="row myrow">
 				<div class="col-sm-6 col-md-6 col-lg-4 port-ite" style="background-image: url('img/portfolio/portfolio-4.png');">
 					<div class="overlay-portfolio">
@@ -204,10 +204,10 @@
 					</div>
 				</div>
 		</div>
-	</section>
+	</div>
 	<!-- Portfolio END -->
 	<!-- Integrity START -->
-	<section id="integrity">
+	<div id="integrity">
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-sm-12 col-md-7 col-centered">
@@ -228,10 +228,10 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
 	<!-- Integrity END -->
 	<!-- Count START -->
-	<section id="count">
+	<div id="count">
 		<div class="container">
 			<div class="row align-items-center">
 				<div class="col-sm-12">
@@ -259,10 +259,10 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
 	<!-- Count END -->
 	<!-- Feedback START -->
-	<section id="feedback">
+	<div id="feedback">
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-12 feed-top">
@@ -301,39 +301,39 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
 	<!-- Feedback END -->
 	<!-- Brends START -->
-	<section id="brends">
+	<div id="brends">
 		<div class="container">
 			<div class="row">
 				<div id="owl-brends" class="owl-carousel owl-theme s-mrb-110 s-mrt-110">
 					<div class="item brends-item">
-						<img src="img/brends/brend-1.png">
+						<img src="img/brends/brend-1.png" alt="img-10">
 					</div>
 					<div class="item brends-item">
-						<img src="img/brends/brend-2.png">
+						<img src="img/brends/brend-2.png" alt="img-11">
 					</div>
 					<div class="item brends-item">
-						<img src="img/brends/brend-3.png">
+						<img src="img/brends/brend-3.png" alt="img-12">
 					</div>
 					<div class="item brends-item">
-						<img src="img/brends/brend-4.png">
+						<img src="img/brends/brend-4.png" alt="img-13">
 					</div>
 					<div class="item brends-item">
-						<img src="img/brends/brend-5.png">
+						<img src="img/brends/brend-5.png" alt="img-14">
 					</div>
 					<div class="item brends-item">
-						<img src="img/brends/brend-6.png">
+						<img src="img/brends/brend-6.png" alt="img-15">
 					</div>
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
 	<!-- Brends END -->
 	<!-- Blog START -->
-	<section id="blog-layer"></section>
-	<section id="blog">
+	<div id="blog-layer"></div>
+	<div id="blog">
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-sm-12 col-md-8 col-centered">
@@ -360,7 +360,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
 	<!-- Blog END -->
 	<!-- Footer START -->
 	<footer>
@@ -421,7 +421,7 @@
 			</div>
 		</div>
 	</footer>
-	<section id="footer-bottom">
+	<div id="footer-bottom">
 		<div class="container">
 			<div class="row align-items-center">
 				<div class="col-sm-6 col-md-6">
@@ -445,7 +445,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
 	<!-- Footer END -->
 	<!-- Jquery -->
 	<script src="js/jquery.min.js"></script>
