--- a/home-4.html
+++ b/home-4.html
@@ -63,7 +63,7 @@
 	</header>
 	<!-- Header END -->
 	<!-- Hero START -->
-	<section id="hero">
+	<div id="hero">
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-1 hero-col-1">
@@ -115,10 +115,10 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
 	<!-- Hero END -->
 	<!-- Top Product START -->
-	<section id="top-product">
+	<div id="top-product">
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-12 col-md-6">
@@ -150,10 +150,10 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
 	<!-- Top Product END -->
 	<!-- Top Hero START -->
-	<section id="top-hero">
+	<div id="top-hero">
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-12 col-md-8 col-lg-4 s-mrb-80">
@@ -181,10 +181,10 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
 	<!-- Top Hero END -->
 	<!-- Blog START -->
-	<section id="blog">
+	<div id="blog">
 		<div class="container">
 			<div class="row align-items-center s-mrb-80">
 				<div class="col-sm-12 col-md-6 col-lg-5">
@@ -217,10 +217,10 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
 	<!-- Blog START -->
 	<!-- Stroe START -->
-	<section id="store">
+	<div id="store">
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-12 col-md-7">
@@ -295,10 +295,10 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
 	<!-- Stroe END -->
 	<!-- Services START -->
-	<section id="services">
+	<div id="services">
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-12 col-md-4 col-lg-3 services-box">
@@ -348,38 +348,38 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
 	<!-- Services END -->
 	<!-- Brends START -->
-	<section id="brends">
+	<div id="brends">
 		<div class="container">
 			<div class="row">
 				<div id="owl-brends" class="owl-carousel owl-theme s-mrb-110 s-mrt-110">
 					<div class="item brends-item">
-						<img src="img/brends/brend-1.png">
+						<img src="img/brends/brend-1.png" alt="img-5">
 					</div>
 					<div class="item brends-item">
-						<img src="img/brends/brend-2.png">
+						<img src="img/brends/brend-2.png" alt="img-6">
 					</div>
 					<div class="item brends-item">
-						<img src="img/brends/brend-3.png">
+						<img src="img/brends/brend-3.png" alt="img-7">
 					</div>
 					<div class="item brends-item">
-						<img src="img/brends/brend-4.png">
+						<img src="img/brends/brend-4.png" alt="img-8">
 					</div>
 					<div class="item brends-item">
-						<img src="img/brends/brend-5.png">
+						<img src="img/brends/brend-5.png" alt="img-9">
 					</div>
 					<div class="item brends-item">
-						<img src="img/brends/brend-6.png">
+						<img src="img/brends/brend-6.png" alt="img-10">
 					</div>
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
 	<!-- Brends END -->
 	<!-- Feedback START -->
-	<section id="feedback">
+	<div id="feedback">
 		<div class="row align-items-center my-row">
 			<div class="col-sm-12 col-md-12 col-lg-6 offset-lg-6">
 				<div id="owl-feedback-2" class="owl-carousel owl-theme">
@@ -389,7 +389,7 @@
 								<img src="img/content/h-4-feed-item-1.png" alt="">
 							</div>
 							<div class="feed-stars s-mrt-40">
-								<img src="img/icon/reviews-stars.png"><br>
+								<img src="img/icon/reviews-stars.png" alt="img-11"><br>
 								<span class="author"><span>Eloise Smith,</span> USA Customer</span>
 							</div>
 						</div>
@@ -402,7 +402,7 @@
 								<img src="img/content/h-4-feed-item-2.png" alt="">
 							</div>
 							<div class="feed-stars s-mrt-40">
-								<img src="img/icon/reviews-stars.png"><br>
+								<img src="img/icon/reviews-stars.png" alt="img-12"><br>
 								<span class="author"><span>Eloise Smith,</span> USA Customer</span>
 							</div>
 						</div>
@@ -412,10 +412,10 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
 	<!-- Feedback END -->
 	<!-- News START -->
-	<section id="news">
+	<div id="news">
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-sm-12 col-md-10 col-centered">
@@ -462,20 +462,20 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
 	<!-- News END -->
 	<!-- Video START -->
-	<section id="player">
+	<div id="player">
 		<div class="video-element" id="video-element-2">
 			<div class="video-element__poster" id="video-poster-2">
-				<img src="img/icon/h-4-play.png" class="btn-play">
+				<img src="img/icon/h-4-play.png" class="btn-play" alt="img-play">
 				<h3>Watch the promo video</h3>
 			</div>
 		</div>
 		<script type="text/template" id="video-2">
 			<iframe width="100%" height="100%" src="https://www.youtube.com/embed/rMIk7rbtg-M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</script>
-	</section>
+	</div>
 	<!-- Video END -->
 	<!-- Footer START -->
 	<footer>
