--- a/home-5.html
+++ b/home-5.html
@@ -61,7 +61,7 @@
 	</header>
 	<!-- Header END -->
 	<!-- Hero START -->
-	<section id="hero">
+	<div id="hero">
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-12 col-md-8">
@@ -81,10 +81,10 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
 	<!-- Hero END -->
 	<!-- Video START -->
-	<section id="player">
+	<div id="player">
 		<div class="container">
 			<div class="row align-items-center">
 				<div class="col-md-12 col-lg-6 player-text">
@@ -96,7 +96,7 @@
 				<div class="col-md-12 col-lg-6">
 					<div class="video-element" id="video-element-2">
 						<div class="video-element__poster" id="video-poster-2">
-							<img src="img/icon/h-5-play.png" class="btn-play">
+							<img src="img/icon/h-5-play.png" class="btn-play" alt="img-2">
 						</div>
 					</div>
 					<script type="text/template" id="video-2">
@@ -105,10 +105,10 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
 	<!-- Video END -->
 	<!-- Services START -->
-	<section id="services">
+	<div id="services">
 		<div class="overlay-sercies"></div>
 		<div class="container">
 			<div class="row justify-content-center">
@@ -148,10 +148,10 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
 	<!-- Services END -->
 	<!-- Sturtups START -->
-	<section id="startup">
+	<div id="startup">
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-12 col-md-6 col-lg-6 start-img">
@@ -166,10 +166,10 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
 	<!-- Sturtups END -->
 	<!-- Feedback START -->
-	<section id="feedback">
+	<div id="feedback">
 		<div class="container">
 			<div class="row justify-content-center s-mrb-60">
 				<div class="col-sm-12 col-md-5 col-centerd">
@@ -186,7 +186,7 @@
 										<img src="img/content/h-4-feed-item-1.png" alt="">
 									</div>
 									<div class="feed-stars s-mrt-40">
-										<img src="img/icon/reviews-stars.png"><br>
+										<img src="img/icon/reviews-stars.png" alt="img-5"><br>
 										<span class="author"><span>Eloise Smith,</span> USA Customer</span>
 									</div>
 								</div>
@@ -199,7 +199,7 @@
 										<img src="img/content/h-4-feed-item-1.png" alt="">
 									</div>
 									<div class="feed-stars s-mrt-40">
-										<img src="img/icon/reviews-stars.png"><br>
+										<img src="img/icon/reviews-stars.png" alt="img-6"><br>
 										<span class="author"><span>Eloise Smith,</span> USA Customer</span>
 									</div>
 								</div>
@@ -214,7 +214,7 @@
 										<img src="img/content/h-4-feed-item-1.png" alt="">
 									</div>
 									<div class="feed-stars s-mrt-40">
-										<img src="img/icon/reviews-stars.png"><br>
+										<img src="img/icon/reviews-stars.png" alt="img-7"><br>
 										<span class="author"><span>Eloise Smith,</span> USA Customer</span>
 									</div>
 								</div>
@@ -224,10 +224,10 @@
 							<div class="op rev-item">
 								<div class="hed-rev">
 									<div class="feed-img s-mrt-40">
-										<img src="img/content/h-4-feed-item-1.png" alt="">
+										<img src="img/content/h-4-feed-item-1.png" alt="img-8">
 									</div>
 									<div class="feed-stars s-mrt-40">
-										<img src="img/icon/reviews-stars.png"><br>
+										<img src="img/icon/reviews-stars.png" alt="img-9"><br>
 										<span class="author"><span>Eloise Smith,</span> USA Customer</span>
 									</div>
 								</div>
@@ -242,7 +242,7 @@
 										<img src="img/content/h-4-feed-item-1.png" alt="">
 									</div>
 									<div class="feed-stars s-mrt-40">
-										<img src="img/icon/reviews-stars.png"><br>
+										<img src="img/icon/reviews-stars.png" alt="img-10"><br>
 										<span class="author"><span>Eloise Smith,</span> USA Customer</span>
 									</div>
 								</div>
@@ -255,7 +255,7 @@
 										<img src="img/content/h-4-feed-item-1.png" alt="">
 									</div>
 									<div class="feed-stars s-mrt-40">
-										<img src="img/icon/reviews-stars.png"><br>
+										<img src="img/icon/reviews-stars.png" alt="img-11"><br>
 										<span class="author"><span>Eloise Smith,</span> USA Customer</span>
 									</div>
 								</div>
@@ -270,7 +270,7 @@
 										<img src="img/content/h-4-feed-item-1.png" alt="">
 									</div>
 									<div class="feed-stars s-mrt-40">
-										<img src="img/icon/reviews-stars.png"><br>
+										<img src="img/icon/reviews-stars.png" alt="img-125"><br>
 										<span class="author"><span>Eloise Smith,</span> USA Customer</span>
 									</div>
 								</div>
@@ -283,7 +283,7 @@
 										<img src="img/content/h-4-feed-item-1.png" alt="">
 									</div>
 									<div class="feed-stars s-mrt-40">
-										<img src="img/icon/reviews-stars.png"><br>
+										<img src="img/icon/reviews-stars.png" alt="img-20"><br>
 										<span class="author"><span>Eloise Smith,</span> USA Customer</span>
 									</div>
 								</div>
@@ -296,10 +296,10 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
 	<!-- Feedback END -->
 	<!-- Portfolio START -->
-	<section id="portfolio">
+	<div id="portfolio">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 col-lg-6 player-text">
@@ -506,10 +506,10 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
 	<!-- Portfolio END -->
 	<!-- Blog START -->
-	<section id="blog">
+	<div id="blog">
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-sm-12 col-md-8 col-centered">
@@ -536,10 +536,10 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
 	<!-- Blog END -->
 	<!-- Awards START -->
-	<section id="awards">
+	<div id="awards">
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-6 col-md-2 offset-md-2">
@@ -570,10 +570,10 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
 	<!-- Awards END -->
 	<!-- Contact START -->
-	<section id="contact">
+	<div id="contact">
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-12">
@@ -583,7 +583,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
 	<!-- Contact END -->
 	<!-- Footer START -->
 	<footer>
