--- a/services-2.html
+++ b/services-2.html
@@ -25,7 +25,7 @@
 			<nav>
 				<div class="logo">
 					<a href="index.html">
-						<img src="img/logo/logo.png" alt="logo" alt="img">
+						<img src="img/logo/logo.png" alt="logo">
 					</a>
 				</div>
 				<ul class="nav-links">
@@ -56,7 +56,7 @@
 	<!-- Main START -->
 	<main>
 		<!-- Hero START -->
-		<section id="hero">
+		<div id="hero">
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-12 col-md-12">
@@ -65,10 +65,10 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<!-- Hero END -->
 		<!-- Services START -->
-		<section id="services">
+		<div id="services">
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-sm-12 col-md-8 title-box col-centered">
@@ -103,10 +103,10 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<!-- Services END -->
 		<!-- Portfolio START -->
-		<section id="portfolio">
+		<div id="portfolio">
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-12 col-md-7 player-text">
@@ -313,10 +313,10 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<!-- Portfolio END -->
 		<!-- Innovative START -->
-		<section id="innovative">
+		<div id="innovative">
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-12 col-lg-6 cir-divs">
@@ -344,10 +344,10 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<!-- Innovative END -->
 		<!-- Contact START -->
-		<section id="contact">
+		<div id="contact">
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-12">
@@ -357,7 +357,7 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<!-- Contact END -->
 	</main>
 	<!-- Main END -->
@@ -414,7 +414,7 @@
 			</div>
 		</div>
 	</footer>
-	<section id="footer-bottom">
+	<div id="footer-bottom">
 		<div class="container">
 			<div class="row align-items-center">
 				<div class="col-sm-6 col-md-6">
@@ -438,7 +438,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
 	<!-- Footer END -->
 	<!-- Jquery -->
 	<script src="js/jquery.min.js"></script>
