--- a/contact-2.html
+++ b/contact-2.html
@@ -25,7 +25,7 @@
 			<nav>
 				<div class="logo">
 					<a href="index.html">
-						<img src="img/logo/logo.png" alt="logo" alt="img">
+						<img src="img/logo/logo.png" alt="logo">
 					</a>
 				</div>
 				<ul class="nav-links">
@@ -56,7 +56,7 @@
 	<!-- Main START -->
 	<main>
 		<!-- Hero START -->
-		<section id="hero">
+		<div id="hero">
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-12 col-md-12">
@@ -65,10 +65,10 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<!-- Hero END -->
 		<!-- About START -->
-		<section id="about">
+		<div id="about">
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="aboutinfo col-md-12 col-lg-7 col-centered s-mrb-125">
@@ -78,10 +78,10 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<!-- About END -->
 		<!-- Video START -->
-		<section id="player">
+		<div id="player">
 			<div class="container">
 				<div class="row align-items-center">
 					<div class="col-md-12 col-lg-6 player-text">
@@ -93,7 +93,7 @@
 					<div class="col-md-12 col-lg-6">
 						<div class="video-element" id="video-element-2">
 							<div class="video-element__poster" id="video-poster-2">
-								<img src="img/icon/h-5-play.png" class="btn-play">
+								<img src="img/icon/h-5-play.png" class="btn-play" alt="img-2">
 							</div>
 						</div>
 						<script type="text/template" id="video-2">
@@ -102,10 +102,10 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<!-- Video END -->
 		<!-- Contact START -->
-		<section id="contact">
+		<div id="contact">
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-12 col-md-6 col-lg-6">
@@ -129,19 +129,17 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<!-- Contact END -->
 		<!-- Map END -->
-		<section id="map">
-			<div class="row">
+		<div id="map">
 				<iframe
 					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d317718.69319292053!2d-0.3817765050863085!3d51.528307984912544!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2z0JvQvtC90LTQvtC9LCDQktC10LvQuNC60L7QsdGA0LjRgtCw0L3QuNGP!5e0!3m2!1sru!2s!4v1587626950211!5m2!1sru!2s"
-					width="100%" height="1000" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-			</div>
-		</section>
+					height="1000" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+		</div>
 		<!-- Map START -->
 		<!-- Contact START -->
-		<section id="contact-get">
+		<div id="contact-get">
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-12">
@@ -151,7 +149,7 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<!-- Contact END -->
 	</main>
 	<!-- Main END -->
@@ -208,7 +206,7 @@
 			</div>
 		</div>
 	</footer>
-	<section id="footer-bottom">
+	<div id="footer-bottom">
 		<div class="container">
 			<div class="row align-items-center">
 				<div class="col-sm-6 col-md-6">
@@ -232,7 +230,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
 	<!-- Footer END -->
 	<!-- Jquery -->
 	<script src="js/jquery.min.js"></script>
