--- a/portfolio-2.html
+++ b/portfolio-2.html
@@ -25,7 +25,7 @@
 			<nav>
 				<div class="logo">
 					<a href="index.html">
-						<img src="img/logo/logo.png" alt="logo" alt="img">
+						<img src="img/logo/logo.png" alt="logo">
 					</a>
 				</div>
 				<ul class="nav-links">
@@ -56,7 +56,7 @@
 	<!-- Main START -->
 	<main>
 		<!-- Hero START -->
-		<section id="hero">
+		<div id="hero">
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-12 col-md-12">
@@ -65,10 +65,10 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<!-- Hero END -->
 		<!-- Portfolio START -->
-		<section id="portfolio">
+		<div id="portfolio">
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-12">
@@ -313,7 +313,7 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<!-- Portfolio END -->
 
 	</main>
@@ -371,7 +371,7 @@
 			</div>
 		</div>
 	</footer>
-	<section id="footer-bottom">
+	<div id="footer-bottom">
 		<div class="container">
 			<div class="row align-items-center">
 				<div class="col-sm-6 col-md-6">
@@ -395,7 +395,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
 	<!-- Footer END -->
 	<!-- Jquery -->
 	<script src="js/jquery.min.js"></script>
