--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
 			<nav>
 				<div class="logo">
 					<a href="index.html">
-						<img src="img/logo/logo.png" alt="logo" alt="img">
+						<img src="img/logo/logo.png" alt="logo">
 					</a>
 				</div>
 				<ul class="nav-links">
@@ -56,7 +56,7 @@
 	<!-- Main START -->
 	<main>
 		<!-- Hero START -->
-		<section id="hero">
+		<div id="hero">
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-12 col-md-5">
@@ -65,11 +65,11 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<!-- Hero END -->
 
 		<!-- Portfolio START -->
-		<section id="portfolio">
+		<div id="portfolio">
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-12 col-md-12">
@@ -493,11 +493,11 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<!-- Portfolio END -->
 
 		<!-- Newsletter START -->
-		<section id="news">
+		<div id="news">
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-sm-12">
@@ -515,7 +515,7 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<!-- Newsletter END -->
 	</main>
 	<!-- Main END -->
