--- a/services.html
+++ b/services.html
@@ -25,7 +25,7 @@
 			<nav>
 				<div class="logo">
 					<a href="index.html">
-						<img src="img/logo/logo.png" alt="logo" alt="img">
+						<img src="img/logo/logo.png" alt="logo">
 					</a>
 				</div>
 				<ul class="nav-links">
@@ -56,7 +56,7 @@
 	<!-- Main START -->
 	<main>
 		<!-- Hero START -->
-		<section id="hero">
+		<div id="hero">
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-12 col-md-5">
@@ -65,16 +65,16 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<!-- Hero END -->
 		<!-- Info START -->
-		<section id="info">
+		<div id="info">
 			<div class="container">
 				<div class="row align-items-center">
 					<div class="col-md-12 col-lg-3">
 						<div class="infobox">
 							<div class="back cl1">
-								<img src="img/icon/group-493.png" class="infoicon">
+								<img src="img/icon/group-493.png" class="infoicon" alt="img-1">
 							</div>
 							<h2>UX DESIGN</h2>
 							<p>We believe your unique values are what make you stand out, lead, and succeed in the fast-evolving business world.</p> <a href="#"><span class="fcl1">More...</span></a>
@@ -85,7 +85,7 @@
 							<div class="col-12">
 								<div class="infobox">
 									<div class="back cl1">
-										<img src="img/icon/group-494.png" class="infoicon">
+										<img src="img/icon/group-494.png" class="infoicon" alt="img-2">
 									</div>
 									<h2>DEVELOPMENT</h2>
 									<p>We believe your unique values are what make you stand out, lead, and succeed in the fast-evolving business world.</p> <a href="#"><span class="fcl1">More...</span></a>
@@ -94,7 +94,7 @@
 							<div class="col-12">
 								<div class="infobox">
 									<div class="back cl1">
-										<img src="img/icon/group-495.png" class="infoicon">
+										<img src="img/icon/group-495.png" class="infoicon" alt="img-3">
 									</div>
 									<h2>BRANDING</h2>
 									<p>We believe your unique values are what make you stand out, lead, and succeed in the fast-evolving business world.</p> <a href="#"><span class="fcl1">More...</span></a>
@@ -105,16 +105,16 @@
 					<div class="col-md-12 col-lg-5 infoboxlg">
 						<h4 class="s-title-sm">Our blend of experience</h4>
 						<h2 class="s-title textcolor-bl fs-36">Your business success</h2>
-						<img src="img/content/services-page-info.png" alt="">
+						<img src="img/content/services-page-info.png" alt="img-4">
 						<p class="s-subtitle">We leverage brand intelligence to develop meaningful content and engage people with actionable brand experiences that spark human connection.</p>
 						<p class="s-subtitle">We leverage brand intelligence to develop meaningful content and engage people with actionable brand experiences that spark human connection.</p>
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<!-- Info END-->
 		<!-- Services START -->
-		<section id="services">
+		<div id="services">
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-sm-12 col-md-7 serives-title col-centered">
@@ -125,10 +125,10 @@
 				<div class="row s-mrt-80">
 					<div class="col-sm-12 col-md-6 services-image-box">
 						<div class="services-image-1">
-							<img src="img/content/services-image-3.png">
+							<img src="img/content/services-image-3.png"  alt="img-6">
 						</div>
 						<div class="services-image-2">
-							<img src="img/content/services-image-4.png">
+							<img src="img/content/services-image-4.png" alt="img-7">
 						</div>
 					</div>
 					<div class="col-sm-12 col-md-6 services-tabs">
@@ -166,10 +166,10 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<!-- Services END-->
 		<!-- Specialize START -->
-		<section id="specialize">
+		<div id="specialize">
 			<div class="container">
 				<div class="row align-items-center">
 					<div class="col-sm-12 col-md-6 col-lg-6 specialize-text">
@@ -178,7 +178,7 @@
 						<p class="s-subtitle">We leverage brand intelligence to develop meaningful content and engage people with actionable brand experiences that spark human connection.</p>
 						<p class="s-subtitle">We leverage brand intelligence to develop meaningful content and engage people with actionable brand experiences that spark human connection.</p>
 					</div>
-					<div class="col-sm-12 col-md-6 col-lg-6 specialize-boxs">
+					<div class="col-sm-12 col-md-5 col-lg-5 specialize-boxs">
 						<div class="medium-cir cir">
 							<p class="cir-count">8+</p>
 							<p class="cir-text">Offices</p>
@@ -194,10 +194,10 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<!-- Specialize END-->
 		<!-- Feedback START -->
-		<section id="feedback">
+		<div id="feedback">
 			<div class="container">
 				<div class="row s-mrb-60">
 					<div class="col-sm-12 col-md-12">
@@ -211,10 +211,10 @@
 								<div class="cl rev-item">
 									<div class="hed-rev">
 										<div class="feed-img s-mrt-40">
-											<img src="img/content/h-4-feed-item-1.png" alt="">
+											<img src="img/content/h-4-feed-item-1.png" alt="img-7">
 										</div>
 										<div class="feed-stars s-mrt-40">
-											<img src="img/icon/reviews-stars.png"><br>
+											<img src="img/icon/reviews-stars.png"  alt="img-8"><br>
 											<span class="author"><span>Eloise Smith,</span> USA Customer</span>
 										</div>
 									</div>
@@ -224,10 +224,10 @@
 								<div class="op rev-item">
 									<div class="hed-rev">
 										<div class="feed-img s-mrt-40">
-											<img src="img/content/h-4-feed-item-1.png" alt="">
+											<img src="img/content/h-4-feed-item-1.png" alt="img-9">
 										</div>
 										<div class="feed-stars s-mrt-40">
-											<img src="img/icon/reviews-stars.png"><br>
+											<img src="img/icon/reviews-stars.png" alt="img-10"><br>
 											<span class="author"><span>Eloise Smith,</span> USA Customer</span>
 										</div>
 									</div>
@@ -239,10 +239,10 @@
 								<div class="cl rev-item">
 									<div class="hed-rev">
 										<div class="feed-img s-mrt-40">
-											<img src="img/content/h-4-feed-item-1.png" alt="">
+											<img src="img/content/h-4-feed-item-1.png" alt="img-11">
 										</div>
 										<div class="feed-stars s-mrt-40">
-											<img src="img/icon/reviews-stars.png"><br>
+											<img src="img/icon/reviews-stars.png"  alt="img-12"><br>
 											<span class="author"><span>Eloise Smith,</span> USA Customer</span>
 										</div>
 									</div>
@@ -252,10 +252,10 @@
 								<div class="op rev-item">
 									<div class="hed-rev">
 										<div class="feed-img s-mrt-40">
-											<img src="img/content/h-4-feed-item-1.png" alt="">
+											<img src="img/content/h-4-feed-item-1.png" alt="img-13">
 										</div>
 										<div class="feed-stars s-mrt-40">
-											<img src="img/icon/reviews-stars.png"><br>
+											<img src="img/icon/reviews-stars.png" alt="img-14"><br>
 											<span class="author"><span>Eloise Smith,</span> USA Customer</span>
 										</div>
 									</div>
@@ -267,10 +267,10 @@
 								<div class="cl rev-item">
 									<div class="hed-rev">
 										<div class="feed-img s-mrt-40">
-											<img src="img/content/h-4-feed-item-1.png" alt="">
+											<img src="img/content/h-4-feed-item-1.png" alt="img-15">
 										</div>
 										<div class="feed-stars s-mrt-40">
-											<img src="img/icon/reviews-stars.png"><br>
+											<img src="img/icon/reviews-stars.png"  alt="img-16"><br>
 											<span class="author"><span>Eloise Smith,</span> USA Customer</span>
 										</div>
 									</div>
@@ -280,10 +280,10 @@
 								<div class="op rev-item">
 									<div class="hed-rev">
 										<div class="feed-img s-mrt-40">
-											<img src="img/content/h-4-feed-item-1.png" alt="">
+											<img src="img/content/h-4-feed-item-1.png" alt="img-17">
 										</div>
 										<div class="feed-stars s-mrt-40">
-											<img src="img/icon/reviews-stars.png"><br>
+											<img src="img/icon/reviews-stars.png" alt="img-18"><br>
 											<span class="author"><span>Eloise Smith,</span> USA Customer</span>
 										</div>
 									</div>
@@ -295,10 +295,10 @@
 								<div class="cl rev-item">
 									<div class="hed-rev">
 										<div class="feed-img s-mrt-40">
-											<img src="img/content/h-4-feed-item-1.png" alt="">
+											<img src="img/content/h-4-feed-item-1.png" alt="img-19">
 										</div>
 										<div class="feed-stars s-mrt-40">
-											<img src="img/icon/reviews-stars.png"><br>
+											<img src="img/icon/reviews-stars.png" alt="img-20"><br>
 											<span class="author"><span>Eloise Smith,</span> USA Customer</span>
 										</div>
 									</div>
@@ -308,10 +308,10 @@
 								<div class="op rev-item">
 									<div class="hed-rev">
 										<div class="feed-img s-mrt-40">
-											<img src="img/content/h-4-feed-item-1.png" alt="">
+											<img src="img/content/h-4-feed-item-1.png" alt="img-21">
 										</div>
 										<div class="feed-stars s-mrt-40">
-											<img src="img/icon/reviews-stars.png"><br>
+											<img src="img/icon/reviews-stars.png" alt="img-22"><br>
 											<span class="author"><span>Eloise Smith,</span> USA Customer</span>
 										</div>
 									</div>
@@ -324,10 +324,10 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<!-- Feedback END -->
 		<!-- Newsletter START -->
-		<section id="news">
+		<div id="news">
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-sm-12">
@@ -345,7 +345,7 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<!-- Newsletter END -->
 	</main>
 	<!-- Main END -->
