--- a/shop-2.html
+++ b/shop-2.html
@@ -25,7 +25,7 @@
 			<nav>
 				<div class="logo">
 					<a href="index.html">
-						<img src="img/logo/logo.png" alt="logo" alt="img">
+						<img src="img/logo/logo.png" alt="logo">
 					</a>
 				</div>
 				<ul class="nav-links">
@@ -56,7 +56,7 @@
 	<!-- Main START -->
 	<main>
 		<!-- Hero START -->
-		<section id="hero">
+		<div id="hero">
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-12 col-md-12">
@@ -65,10 +65,10 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<!-- Hero END -->
 		<!-- Products START -->
-		<section id="products">
+		<div id="products">
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-12 col-md-8">
@@ -86,14 +86,14 @@
 						<div class="row">
 							<div class="col-sm-12 col-md-6">
 								<div class="product-item">
-									<img src="img/shop/product-1.png">
+									<img src="img/shop/product-1.png" alt="img-1">
 									<h3><a href="#">Barrel headphones</a> <span class="price">$15.00</span></h3>
 									<p><a href="#">AUDIO</a></p>
 								</div>
 							</div>
 							<div class="col-sm-12 col-md-6">
 								<div class="product-item">
-									<img src="img/shop/product-2.png">
+									<img src="img/shop/product-2.png" alt="img-2">
 									<h3><a href="#">Barrel headphones</a> <span class="sale">$35.00</span> <span class="price">$15.00</span></h3>
 									<p><a href="#">AUDIO</a></p>
 									<span class="picsale">SALE</span>
@@ -101,21 +101,21 @@
 							</div>
 							<div class="col-sm-12 col-md-6">
 								<div class="product-item">
-									<img src="img/shop/product-3.png">
+									<img src="img/shop/product-3.png" alt="img-3">
 									<h3><a href="#">Barrel headphones</a> <span class="price">$15.00</span></h3>
 									<p><a href="#">AUDIO</a></p>
 								</div>
 							</div>
 							<div class="col-sm-12 col-md-6">
 								<div class="product-item">
-									<img src="img/shop/product-4.png">
+									<img src="img/shop/product-4.png" alt="img-4">
 									<h3><a href="#">Barrel headphones</a> <span class="price">$15.00</span></h3>
 									<p><a href="#">AUDIO</a></p>
 								</div>
 							</div>
 							<div class="col-sm-12 col-md-6">
 								<div class="product-item">
-									<img src="img/shop/product-5.png">
+									<img src="img/shop/product-5.png" alt="img-5">
 									<h3><a href="#">Barrel headphones</a> <span class="sale">$35.00</span> <span class="price">$15.00</span></h3>
 									<p><a href="#">AUDIO</a></p>
 									<span class="picsale">SALE</span>
@@ -123,7 +123,7 @@
 							</div>
 							<div class="col-sm-12 col-md-6">
 								<div class="product-item">
-									<img src="img/shop/product-6.png">
+									<img src="img/shop/product-6.png" alt="img-6">
 									<h3><a href="#">Barrel headphones</a> <span class="price">$15.00</span></h3>
 									<p><a href="#">AUDIO</a></p>
 								</div>
@@ -131,7 +131,7 @@
 							<div class="col-sm-12 baner">
 								<div class="row myfl">
 									<div class="baner-img col-sm-12 col-md-6">
-										<img src="img/shop/product-2.png">
+										<img src="img/shop/product-2.png" alt="img-7">
 									</div>
 									<div class="baner-text col-sm-12 col-md-6">
 										<span class="newtext">NEW</span>
@@ -144,14 +144,14 @@
 							</div>
 							<div class="col-sm-12 col-md-6">
 								<div class="product-item">
-									<img src="img/shop/product-7.png">
+									<img src="img/shop/product-7.png" alt="img-8">
 									<h3><a href="#">Barrel headphones</a> <span class="price">$ 15.00</span></h3>
 									<p><a href="#">AUDIO</a></p>
 								</div>
 							</div>
 							<div class="col-sm-12 col-md-6">
 								<div class="product-item">
-									<img src="img/shop/product-8.png">
+									<img src="img/shop/product-8.png" alt="img-9">
 									<h3><a href="#">Barrel headphones</a> <span class="sale">$ 35.00</span> <span class="price">$ 15.00</span></h3>
 									<p><a href="#">AUDIO</a></p>
 									<span class="picsale">SALE</span>
@@ -207,7 +207,7 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<!-- Products END -->
 	</main>
 	<!-- Main END -->
@@ -264,7 +264,7 @@
 			</div>
 		</div>
 	</footer>
-	<section id="footer-bottom">
+	<div id="footer-bottom">
 		<div class="container">
 			<div class="row align-items-center">
 				<div class="col-sm-6 col-md-6">
@@ -288,7 +288,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
 	<!-- Footer END -->
 	<!-- Jquery -->
 	<script src="js/jquery.min.js"></script>
