--- a/shop.html
+++ b/shop.html
@@ -25,7 +25,7 @@
 			<nav>
 				<div class="logo">
 					<a href="index.html">
-						<img src="img/logo/logo.png" alt="logo" alt="img">
+						<img src="img/logo/logo.png" alt="logo">
 					</a>
 				</div>
 				<ul class="nav-links">
@@ -56,7 +56,7 @@
 	<!-- Main START -->
 	<main>
 		<!-- Hero START -->
-		<section id="hero">
+		<div id="hero">
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-12 col-md-3">
@@ -65,11 +65,11 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<!-- Hero END -->
 
 		<!-- Products START -->
-		<section id="products">
+		<div id="products">
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-12 col-md-6">
@@ -91,14 +91,14 @@
 				<div class="row">
 					<div class="col-sm-12 col-md-6 col-lg-4">
 						<div class="product-item">
-							<img src="img/shop/product-1.png">
+							<img src="img/shop/product-1.png" alt="img-5">
 							<h3><a href="#">Barrel headphones</a> <span class="price">$ 15.00</span></h3>
 							<p><a href="#">AUDIO</a></p>
 						</div>
 					</div>
 					<div class="col-sm-12 col-md-6 col-lg-4">
 						<div class="product-item">
-							<img src="img/shop/product-2.png">
+							<img src="img/shop/product-2.png" alt="img-6">
 							<h3><a href="#">Barrel headphones</a> <span class="sale">$ 35.00</span> <span class="price">$ 15.00</span></h3>
 							<p><a href="#">AUDIO</a></p>
 							<span class="picsale">SALE</span>
@@ -106,21 +106,21 @@
 					</div>
 					<div class="col-sm-12 col-md-6 col-lg-4">
 						<div class="product-item">
-							<img src="img/shop/product-3.png">
+							<img src="img/shop/product-3.png" alt="img-7">
 							<h3><a href="#">Barrel headphones</a> <span class="price">$ 15.00</span></h3>
 							<p><a href="#">AUDIO</a></p>
 						</div>
 					</div>
 					<div class="col-sm-12 col-md-6 col-lg-4">
 						<div class="product-item">
-							<img src="img/shop/product-4.png">
+							<img src="img/shop/product-4.png" alt="img-8">
 							<h3><a href="#">Barrel headphones</a> <span class="price">$ 15.00</span></h3>
 							<p><a href="#">AUDIO</a></p>
 						</div>
 					</div>
 					<div class="col-sm-12 col-md-6 col-lg-4">
 						<div class="product-item">
-							<img src="img/shop/product-5.png">
+							<img src="img/shop/product-5.png" alt="img-9">
 							<h3><a href="#">Barrel headphones</a> <span class="sale">$ 35.00</span> <span class="price">$ 15.00</span></h3>
 							<p><a href="#">AUDIO</a></p>
 							<span class="picsale">SALE</span>
@@ -128,7 +128,7 @@
 					</div>
 					<div class="col-sm-12 col-md-6 col-lg-4">
 						<div class="product-item">
-							<img src="img/shop/product-6.png">
+							<img src="img/shop/product-6.png" alt="img-10">
 							<h3><a href="#">Barrel headphones</a> <span class="price">$ 15.00</span></h3>
 							<p><a href="#">AUDIO</a></p>
 						</div>
@@ -136,7 +136,7 @@
 					<div class="col-sm-12 baner">
 						<div class="row myfl">
 							<div class="baner-img col-sm-12 col-md-6">
-								<img src="img/shop/product-9.png">
+								<img src="img/shop/product-9.png" alt="img-12">
 							</div>
 							<div class="baner-text col-sm-12 col-md-6">
 								<span class="newtext">NEW</span>
@@ -149,14 +149,14 @@
 					</div>
 					<div class="col-sm-12 col-md-6 col-lg-4">
 						<div class="product-item">
-							<img src="img/shop/product-7.png">
+							<img src="img/shop/product-7.png" alt="img-11">
 							<h3><a href="#">Barrel headphones</a> <span class="price">$ 15.00</span></h3>
 							<p><a href="#">AUDIO</a></p>
 						</div>
 					</div>
 					<div class="col-sm-12 col-md-6 col-lg-4">
 						<div class="product-item">
-							<img src="img/shop/product-8.png">
+							<img src="img/shop/product-8.png" alt="img-13">
 							<h3><a href="#">Barrel headphones</a> <span class="sale">$ 35.00</span> <span class="price">$ 15.00</span></h3>
 							<p><a href="#">AUDIO</a></p>
 							<span class="picsale">SALE</span>
@@ -164,21 +164,21 @@
 					</div>
 					<div class="col-sm-12 col-md-6 col-lg-4">
 						<div class="product-item">
-							<img src="img/shop/product-6.png">
+							<img src="img/shop/product-6.png" alt="img-14">
 							<h3><a href="#">Barrel headphones</a> <span class="price">$ 15.00</span></h3>
 							<p><a href="#">AUDIO</a></p>
 						</div>
 					</div>
 					<div class="col-sm-12 col-md-6 col-lg-4">
 						<div class="product-item">
-							<img src="img/shop/product-4.png">
+							<img src="img/shop/product-4.png" alt="img-15">
 							<h3><a href="#">Barrel headphones</a> <span class="price">$ 15.00</span></h3>
 							<p><a href="#">AUDIO</a></p>
 						</div>
 					</div>
 					<div class="col-sm-12 col-md-6 col-lg-4">
 						<div class="product-item">
-							<img src="img/shop/product-5.png">
+							<img src="img/shop/product-5.png" alt="img-16">
 							<h3><a href="#">Barrel headphones</a> <span class="sale">$ 35.00</span> <span class="price">$ 15.00</span></h3>
 							<p><a href="#">AUDIO</a></p>
 							<span class="picsale">SALE</span>
@@ -186,7 +186,7 @@
 					</div>
 					<div class="col-sm-12 col-md-6 col-lg-4">
 						<div class="product-item">
-							<img src="img/shop/product-6.png">
+							<img src="img/shop/product-6.png" alt="img-17">
 							<h3><a href="#">Barrel headphones</a> <span class="price">$ 15.00</span></h3>
 							<p><a href="#">AUDIO</a></p>
 						</div>
@@ -205,11 +205,11 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<!-- Products END -->
 
 		<!-- Newsletter START -->
-		<section id="news">
+		<div id="news">
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-sm-12">
@@ -227,7 +227,7 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<!-- Newsletter END -->
 	</main>
 	<!-- Main END -->
